--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,28 @@
 apply plugin: 'com.android.application'
 
+
+buildscript {
+
+    repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+    }
+}
+
+//Version plugin task -> dependencyUpdates
+apply plugin: 'com.github.ben-manes.versions'
+//Method count
+apply plugin: 'com.getkeepsafe.dexcount'
+//Code Coverage
+apply plugin: 'jacoco-android'
+
+
+
 android {
     compileSdkVersion 26
     buildToolsVersion "25.0.2"
@@ -28,4 +51,30 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+}
+
+//Version plugin task -> dependencyUpdates
+//configures Gradle Versions plugin to list only release status versions
+dependencyUpdates.resolutionStrategy = {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.jacoco.reportPath", "build/jacoco/testDebugUnitTest.exec"
+        property "sonar.junit.reportsPath", "build/test-results/debug"
+    }
+}
+
+jacoco {
+    toolVersion = jacocoVersion
 }
